# famsic

./: .metadata  README.md  build_log.txt  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/famsic/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/audio_engine/: audio_engine_bindings.dart
lib/core/: famsic_audio_handler.dart  music_service.dart  native_song_model.dart
lib/models/: local_collection.dart
lib/providers/: audio_providers.dart  collections_provider.dart  equalizer_provider.dart  library_filter_provider.dart  navigation_provider.dart  settings_provider.dart  sleep_timer_provider.dart
lib/screens/: equalizer_screen.dart  folder_screen.dart  library_screen.dart  player_screen.dart  settings_screen.dart
lib/theme/: app_theme.dart
lib/widgets/: collection_card.dart  collection_creator_sheet.dart  curved_progress_bar.dart  horizontal_progress.dart  hybrid_media_bar.dart  liquid_nav_bar.dart  playback_controls.dart  preset_selector.dart  u_header.dart  visualizer_dial.dart  visualizer_styles.dart
native_audio/: CMakeLists.txt  audio_engine.cpp  audio_engine.h
scratch/: stitch_code.dart  stitch_images.json  stitch_v1.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
